k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '9'
  creationTimestamp: '2023-10-08T20:43:03Z'
  generation: 11
  labels:
    app.kubernetes.io/instance: bookme
    io.kompose.service: client
  name: client
  namespace: bookme
  resourceVersion: '35584990'
  uid: 0305df72-f130-4f1b-b7ab-d267d90c8d92
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/traefik: 'true'
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: CLIENT_ID
                  name: bookme-secret
            - name: API_URL
              valueFrom:
                configMapKeyRef:
                  key: API_URL
                  name: bookme
            - name: CLIENT_URL
              valueFrom:
                configMapKeyRef:
                  key: CLIENT_URL
                  name: bookme
            - name: MONGO_URI
              valueFrom:
                configMapKeyRef:
                  key: MONGO_URI
                  name: bookme
            - name: TZ
              valueFrom:
                configMapKeyRef:
                  key: TZ
                  name: bookme
          image: 'ghcr.io/fhswf/book_me/frontend:1.2.13'
          imagePullPolicy: Always
          name: client
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
