k8s/bookme-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/cgawron/bin/kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.enable: "true"
    traefik.http.routers.bookme_api.entrypoints: web,websecure
    traefik.http.routers.bookme_api.rule: PathPrefix(`/bookme/api`)
  creationTimestamp: null
  labels:
    io.kompose.service: bookme
  name: bookme
  namespace: bookme
spec:
  ports:
    - name: "api"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: bookme
status:
  loadBalancer: {}
