k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/cgawron/bin/kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.enable: "true"
    traefik.http.routers.bookme_client.entrypoints: web,websecure
    traefik.http.routers.bookme_client.rule: PathPrefix(`/bookme`)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
  namespace: bookme
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: client
status:
  loadBalancer: {}
