k8s/bookme-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/cgawron/bin/kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.enable: "true"
    traefik.http.routers.bookme_api.entrypoints: web,websecure
    traefik.http.routers.bookme_api.rule: PathPrefix(`/bookme/api`)
  creationTimestamp: null
  labels:
    io.kompose.service: bookme
  name: bookme
  namespace: bookme
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bookme
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /home/cgawron/bin/kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/traefik: "true"
        io.kompose.service: bookme
    spec:
      containers:
        - env:
            - name: CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: CLIENT_ID
                  name: bookme-secret
            - name: CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: CLIENT_SECRET
                  name: bookme-secret
            - name: API_URL
              valueFrom:
                configMapKeyRef:
                  key: API_URL
                  name: bookme
            - name: CLIENT_URL
              valueFrom:
                configMapKeyRef:
                  key: CLIENT_URL
                  name: bookme
            - name: MONGO_URI
              valueFrom:
                configMapKeyRef:
                  key: MONGO_URI
                  name: bookme
            - name: TZ
              valueFrom:
                configMapKeyRef:
                  key: TZ
                  name: bookme
          image: ghcr.io/fhswf/book_me/backend:latest
          name: bookme
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookme-ingress
  namespace: bookme
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`hopper.fh-swf.de`) && PathPrefix(`/meeting/api`)
    kind: Rule
    services:
    - name: bookme
      port: 5000
